@@ -56,6 +56,11 @@ sub DESTROY
     if (!defined $ENV{'ACE_TEST_VERBOSE'}) {
         unlink "run_vx.pl";
     }
+
+    if (defined $ENV{'ACE_RUN_VX_IBOOT'} && !defined $ENV{'ACE_RUN_VX_NO_SHUTDOWN'}) {
+      # Shutdown the target to save power
+      $self->iboot_cycle_power(1);
+    }
 }
 
 ###############################################################################
